After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 633398 - Fix check for events on UI widgets
Fix check for events on UI widgets
Status: RESOLVED FIXED
Product: mutter
Classification: Core
Component: general
unspecified
Other All
: Normal normal
: ---
Assigned To: mutter-maint
mutter-maint
Depends on:
Blocks:
 
 
Reported: 2010-10-28 20:33 UTC by Owen Taylor
Modified: 2010-10-28 20:35 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
Fix check for events on UI widgets (1.14 KB, patch)
2010-10-28 20:33 UTC, Owen Taylor
committed Details | Review

Description Owen Taylor 2010-10-28 20:33:27 UTC
Now that we create MetaWindow objects for override-redirect windows, we need
to check all key press events to see if they are on GTK+ widgets, not just
events that don't match a MetaWindow. This fixes a problem with alt-Tab stealing
grabs away from the window menu.
Comment 1 Owen Taylor 2010-10-28 20:33:29 UTC
Created attachment 173434 [details] [review]
Fix check for events on UI widgets
Comment 2 Owen Taylor 2010-10-28 20:35:49 UTC
danw approved with IRC review

Attachment 173434 [details] pushed as 441c050 - Fix check for events on UI widgets